add small search api
